--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -29,7 +29,7 @@
   <div class="col-md-12">
 
 
-    <%= form_for @customer, :url => admin_customer_path, :method=>'PATCH' do |f|  %>
+    <%= simple_form_for @customer, :url => admin_customer_path, :method=>'PATCH' do |f|  %>
       <%= render partial: "form", locals: {f: f} %>
     <% end %>
 
