se cambia el nombre de unos campos

--- a/app/views/admin/customers/_form.html.haml
+++ b/app/views/admin/customers/_form.html.haml
@@ -30,13 +30,13 @@
     = q.label :total_services, "Cupos de servicios"
     = q.number_field :total_services, class: "form-control unicase-form-control text-input"
   .form-group.col-md-4
-    = q.label :current_trucks, "Cupos de camiones"
+    = q.label :current_trucks, "Cantidad consumida camiones"
     = q.number_field :current_trucks, class: "form-control unicase-form-control text-input"
   .form-group.col-md-4
-    = q.label :current_extras, "Cupos de respuestos"
+    = q.label :current_extras, "Cantidad consumida respuestos"
     = q.number_field :current_extras, class: "form-control unicase-form-control text-input"
   .form-group.col-md-4
-    = q.label :current_services, "Cupos de servicios"
+    = q.label :current_services, "Cantidad consumidas ervicios"
     = q.number_field :current_services, class: "form-control unicase-form-control text-input"
 .col-md-4.col-sm-12.cart-shopping-total.pull-right
   %table.table
