--- a/app/views/pages/mirepuestosnew.html.erb
+++ b/app/views/pages/mirepuestosnew.html.erb
@@ -68,8 +68,8 @@
 
       <div class="col-md-6">
         <div class="form-group">
-          <%= f.label :type_trucks_id, 'Tipo de camion' %>
-          <%= f.collection_select :type_trucks_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+          <%= f.label :type_truck_id, 'Tipo de camion' %>
+          <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
         </div>
       </div>
 
