--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -10,33 +10,7 @@
 
 <div class="row">
     <div class="col-md-12">
-
-        <% if !@truck.blank? %>
-            <%= form_for @truck,:url => micamionesnew_path, html:  {multipart: true} do |f| %>
-                <% if @truck.errors.any? %>
-                    <div class="container t10">
-                        <div class="col-md-6 col-xs-12 col-md-offset-3">
-                            <div id="error_explanation" style="text-align: center">
-                                <h3>
-                                    <%= "#{pluralize(@truck.errors.count, "Error(es)")} #{'evita(n) que se guarde el nuevo registro'}:" %>
-                                </h3>
-                                <ul>
-                                    <% @truck.errors.full_messages.each do |msg| %>
-
-                                            <li class="alert alert-danger alert-dismissable">
-                                                <%= msg %>
-                                            </li>
-
-
-                                    <% end %>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                <% end %>
-            <% end %>
-        <% end %>
-
+      <%= render partial: 'includes/messages_errors', locals: {object: @truck} %>
         <%= form_for @truck, :url => micamionesnew_path do |f|  %>
 
 		    <div class="row">
