--- a/app/views/pages/mirepuestosnew.html.erb
+++ b/app/views/pages/mirepuestosnew.html.erb
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-md-12">
 
-
+    <%= render partial: 'includes/messages_errors', locals: {object: @extra} %>
     <%= form_for @extra, :url => mirepuestosnew_path  do |f|  %>
 
 
