--- a/app/views/pages/micuentalogin.html.erb
+++ b/app/views/pages/micuentalogin.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="bloque">
 
+    
 
-
-    <form class="" role="form" method="post">
+    <form class="" role="form" action= "<%= login_sessions_path %>"method="post" >
 
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"/>
       <div class="row">
