--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -10,35 +10,7 @@
   </div>
 </div>
 
-<% if flash[:error] %>
-    <div class="alert alert-danger alert-dismissable">
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <%= flash[:error] %>
-    </div>
-<% end %>
-<div class="row">
-  <% if !@truck.blank? %>
-      <%= form_for @truck,:url => micamionesedit_path, html:  {multipart: true} do |f| %>
-          <% if @truck.errors.any? %>
-              <div class="container t10">
-                <div class="col-md-6 col-xs-12 col-md-offset-3">
-                  <div id="error_explanation" style="text-align: center">
-                    <ul>
-                      <% @truck.errors.full_messages.each do |msg| %>
-
-                          <li class="alert alert-danger alert-dismissable">
-                            <%= msg %>
-                          </li>
-
-
-                      <% end %>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-          <% end %>
-      <% end %>
-  <% end %>
+<%= render partial: 'includes/messages_errors', locals: {object: @truck} %>
 </div>
 
     <div class="col-md-12">
