--- a/app/views/pages/mirepuestosedit.html.erb
+++ b/app/views/pages/mirepuestosedit.html.erb
@@ -7,29 +7,7 @@
   </div>
 </div>
 
-<% if flash[:error] %>
-    <div class="alert alert-danger alert-dismissable">
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <%= flash[:error] %>
-    </div>
-<% end %>
-
-<% if !@extra.blank? %>
-    <%= form_for @extra,:url => micamionesedit_path, html:  {multipart: true} do |f| %>
-        <% if @extra.errors.any? %>
-
-                <div id="error_explanation" style="text-align: center">
-                    <% @extra.errors.full_messages.each do |msg| %>
-                        <div class="alert alert-danger alert-dismissable col-md-6 col-md-offset-3">
-                          <%= msg %>
-                        </div>
-                    <% end %>
-
-                </div>
-
-        <% end %>
-    <% end %>
-<% end %>
+<%= render partial: 'includes/messages_errors', locals: {object: @extra} %>
 <div class="row">
 
     <%= form_for @extra, :url => mirepuestosedit_path , :method=> 'post' do |f|  %>
