--- a/app/views/pages/miserviciosnew.html.erb
+++ b/app/views/pages/miserviciosnew.html.erb
@@ -10,6 +10,7 @@
 
 <div class="row">
   <div class="col-md-12">
+    <%= render partial: 'includes/messages_errors', locals: {object: @service} %>
     <%= form_for @service, :url => miserviciosnew_path, :method=>'post' do |f|  %>
 
         <div class="row">
