--- a/app/views/pages/miserviciosnew.html.erb
+++ b/app/views/pages/miserviciosnew.html.erb
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-md-3">
             <%= f.label :horario, 'Horario Desde' %>
-            <%= f.collection_select :horario, @horas,:first,:last,{},{class: 'form-control text_field'} %>
+            <%= f.collection_select :horario, @horas,:last,:first,{},{class: 'form-control text_field'} %>
           </div>
         </div>
         <div class="row">
