--- a/app/views/pages/mirepuestosnew.html.erb
+++ b/app/views/pages/mirepuestosnew.html.erb
@@ -41,10 +41,13 @@
       </div>
 
       <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :horario, 'Horario' %>
-          <%= f.text_field :horario, :class =>'form-control'  %>
-        </div>
+
+          <div class="col-md-3">
+            <%= f.label :horario, 'Horario de atencion' %>
+            <%= f.collection_select :horario, @horas,:last,:first,{},{class: 'form-control text_field'} %>
+          </div>
+
+
       </div>
 
     </div>
