--- a/app/views/pages/miserviciosnew.html.erb
+++ b/app/views/pages/miserviciosnew.html.erb
@@ -49,19 +49,10 @@
 
         <div class="row">
           <div class="col-md-3">
-            <%= f.label :horario, 'Horario Desde' %>
+            <%= f.label :horario, 'Horario de atencion' %>
             <%= f.collection_select :horario, @horas,:last,:first,{},{class: 'form-control text_field'} %>
           </div>
         </div>
-        <div class="row">
-
-
-
-
-
-        </div>
-
-
 
 
         <div class="row">
