--- a/app/views/pages/mirepuestosedit.html.erb
+++ b/app/views/pages/mirepuestosedit.html.erb
@@ -56,7 +56,7 @@
                 <div class="col-md-5">
                     <div class="col-md-3">
                         <%= f.label :horario, 'Horario de atencion' %>
-                        <%= f.collection_select :horario, @horas,:last,:first,{},{class: 'form-control text_field'} %>
+                        <%= f.collection_select :horario, @horas,:first,:first,{},{class: 'form-control text_field'} %>
                     </div>
                 </div>
             </div>
