--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -42,7 +42,7 @@
         <div class="row">
           <div class="col-md-3">
             <%= f.label :horario, 'Horario de atencion' %>
-            <%= f.collection_select :horario, @horas,:last,:first,{prompt:'Selecciones'},{class: 'form-control text_field'} %>
+            <%= f.collection_select :horario, @horas,:first,:first,{prompt:'Selecciones'},{class: 'form-control text_field'} %>
           </div>
         </div>
 
