se agrega parcial que muestar la galeria

--- a/app/views/pages/servicio.html.erb
+++ b/app/views/pages/servicio.html.erb
@@ -21,122 +21,9 @@
 
 <div class='col-md-12'>
   <div class="row  wow fadeInUp">
-    <div class="col-xs-12 col-sm-6 col-md-7 gallery-holder">
-      <div class="product-item-holder size-big single-product-gallery small-gallery">
 
-        <div id="owl-single-product">
+    <%= render partial: 'includes/galeria', locals: {object: @service} %>
 
-
-          <% if @service.picture2.to_s  != '/images/missing.png' %>
-              <div class="single-product-gallery-item" id="slide1">
-                <a data-lightbox="image-1" data-title="Gallery" href="<%= image_path( @service.picture2(:home ))  %>">
-                  <%= image_tag @service.picture2(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture2(:home ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-
-          <% if @service.picture3.to_s  != '/images/missing.png' %>
-              <div class="single-product-gallery-item" id="slide2">
-                <a data-lightbox="image-2" data-title="Gallery" href="<%= image_path( @service.picture3(:home ))  %>">
-                  <%= image_tag @service.picture3(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture3(:home ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-          <% if @service.picture4.to_s  != '/images/missing.png' %>
-              <div class="single-product-gallery-item" id="slide3">
-                <a data-lightbox="image-3" data-title="Gallery" href="<%= image_path( @service.picture4(:home ))  %>">
-                  <%= image_tag @service.picture4(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture4(:home ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-
-          <% if @service.picture5.to_s  != '/images/missing.png' %>
-              <div class="single-product-gallery-item" id="slide4">
-                <a data-lightbox="image-4" data-title="Gallery" href="<%= image_path( @service.picture5(:home ))  %>">
-                  <%= image_tag @service.picture5(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture5(:home ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-
-
-
-        </div><!-- /.single-product-slider -->
-
-
-
-        <div class="single-product-gallery-thumbs second-gallery-thumb gallery-thumbs">
-
-          <div id="owl-single-product2-thumbnails">
-
-            <% if @service.picture2.to_s  != '/images/missing.png' %>
-                <div class="item">
-                  <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="0" href="#slide1">
-
-                    <%= image_tag @service.picture2(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture2(:home ))  %>
-                  </a>
-                </div>
-            <% end %>
-
-
-            <% if @service.picture3.to_s  != '/images/missing.png' %>
-                <div class="item">
-                  <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="1" href="#slide2">
-
-                    <%= image_tag @service.picture3(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture3(:home ))  %>
-                  </a>
-                </div>
-            <% end %>
-
-
-
-            <% if @service.picture4.to_s  != '/images/missing.png' %>
-                <div class="item">
-                  <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="2" href="#slide3">
-
-                    <%= image_tag @service.picture4(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture4(:home ))  %>
-                  </a>
-                </div>
-            <% end %>
-
-
-
-            <% if @service.picture5.to_s  != '/images/missing.png' %>
-                <div class="item">
-                  <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="3" href="#slide4">
-
-                    <%= image_tag @service.picture5(:home ), :class=>'img-responsive', 'data-echo'=>image_path( @service.picture5(:home ))  %>
-                  </a>
-                </div>
-            <% end %>
-
-
-
-
-
-
-          </div><!-- /#owl-single-product-thumbnails -->
-
-
-
-
-          <div class="nav-holder left">
-            <a class="prev-btn slider-prev" data-target="#owl-single-product2-thumbnails" href="#prev"></a>
-          </div><!-- /.nav-holder -->
-          <div class="nav-holder right">
-            <a class="next-btn slider-next" data-target="#owl-single-product2-thumbnails" href="#next"></a>
-          </div><!-- /.nav-holder -->
-        </div><!-- /.gallery-thumbs -->
-
-      </div><!-- /.single-product-gallery -->
-    </div><!-- /.gallery-holder -->
     <div class='col-sm-6 col-md-5 product-info-block'>
       <div class="product-info">
         <h1 class="name"><%= @service.name %></h1>
