--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -31,143 +31,7 @@
 
 <div class='col-md-12'>
 <div class="row  wow fadeInUp">
-  <div class="col-xs-12 col-sm-6 col-md-7 gallery-holder">
-    <div class="product-item-holder size-big single-product-gallery small-gallery">
-
-      <div id="owl-single-product">
-
-
-        <% if @truck.picture1.to_s  != '/images/missing.png' %>
-            <div class="single-product-gallery-item" id="slide1">
-              <a data-lightbox="image-1" data-title="Gallery" href="<%= image_path( @truck.picture1(:home ))  %>">
-                <%= image_tag @truck.picture1(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture1(:medium ))  %>
-              </a>
-            </div>
-        <% end %>
-
-
-        <% if @truck.picture2.to_s  != '/images/missing.png' %>
-        <div class="single-product-gallery-item" id="slide2">
-          <a data-lightbox="image-2" data-title="Gallery" href="<%= image_path( @truck.picture2(:home ))  %>">
-            <%= image_tag @truck.picture2(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture2(:medium ))  %>
-          </a>
-        </div>
-         <% end %>
-
-
-
-        <% if @truck.picture3.to_s  != '/images/missing.png' %>
-            <div class="single-product-gallery-item" id="slide3">
-              <a data-lightbox="image-3" data-title="Gallery" href="<%= image_path( @truck.picture3(:home ))  %>">
-                <%= image_tag @truck.picture3(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture3(:medium ))  %>
-              </a>
-            </div>
-        <% end %>
-
-
-        <% if @truck.picture4.to_s  != '/images/missing.png' %>
-            <div class="single-product-gallery-item" id="slide4">
-              <a data-lightbox="image-4" data-title="Gallery" href="<%= image_path( @truck.picture4(:home ))  %>">
-                <%= image_tag @truck.picture4(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture4(:medium ))  %>
-              </a>
-            </div>
-        <% end %>
-
-
-
-        <% if @truck.picture5.to_s  != '/images/missing.png' %>
-            <div class="single-product-gallery-item" id="slide5">
-              <a data-lightbox="image-5" data-title="Gallery" href="<%= image_path( @truck.picture5(:home ))  %>">
-                <%= image_tag @truck.picture5(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture5(:medium ))  %>
-              </a>
-            </div>
-        <% end %>
-
-
-
-
-
-      </div><!-- /.single-product-slider -->
-
-
-      <div class="single-product-gallery-thumbs second-gallery-thumb gallery-thumbs">
-
-        <div id="owl-single-product2-thumbnails">
-
-
-          <% if @truck.picture1.to_s  != '/images/missing.png' %>
-              <div class="item">
-                <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="0" href="#slide1">
-
-                  <%= image_tag @truck.picture1(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture1(:medium ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-
-
-          <% if @truck.picture2.to_s  != '/images/missing.png' %>
-          <div class="item">
-            <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="1" href="#slide2">
-
-              <%= image_tag @truck.picture2(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture2(:medium ))  %>
-            </a>
-          </div>
-          <% end %>
-
-
-          <% if @truck.picture3.to_s  != '/images/missing.png' %>
-              <div class="item">
-                <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="2" href="#slide3">
-
-                  <%= image_tag @truck.picture3(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture3(:medium ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-
-          <% if @truck.picture4.to_s  != '/images/missing.png' %>
-              <div class="item">
-                <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="3" href="#slide4">
-
-                  <%= image_tag @truck.picture4(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture4(:medium ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-
-          <% if @truck.picture5.to_s  != '/images/missing.png' %>
-              <div class="item">
-                <a class="horizontal-thumb active" data-target="#owl-single-product" data-slide="4" href="#slide5">
-
-                  <%= image_tag @truck.picture5(:medium ), :class=>'img-responsive', 'data-echo'=>image_path( @truck.picture5(:medium ))  %>
-                </a>
-              </div>
-          <% end %>
-
-
-
-
-
-
-        </div><!-- /#owl-single-product-thumbnails -->
-
-
-
-
-        <div class="nav-holder left">
-          <a class="prev-btn slider-prev" data-target="#owl-single-product2-thumbnails" href="#prev"></a>
-        </div><!-- /.nav-holder -->
-        <div class="nav-holder right">
-          <a class="next-btn slider-next" data-target="#owl-single-product2-thumbnails" href="#next"></a>
-        </div><!-- /.nav-holder -->
-      </div><!-- /.gallery-thumbs -->
-
-    </div><!-- /.single-product-gallery -->
-  </div><!-- /.gallery-holder -->
+  <%= render partial: 'includes/galeria', locals: {object: @truck} %>
   <div class='col-sm-6 col-md-5 product-info-block'>
     <div class="product-info">
       <h1 class="name"><%= @truck.nombre %></h1>
