--- a/app/views/admin/sub_trucks/index.html.erb
+++ b/app/views/admin/sub_trucks/index.html.erb
@@ -57,7 +57,7 @@
 
 
                 <%= link_to 'Editar', edit_admin_type_truck_sub_truck_path( type.type_truck_id, type.id), :class=>'btn btn-info' %>
-                <%= link_to 'Eliminar', {:controller => 'admin/sub_truck', :action => 'destroy', :id => type.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
+                <%= link_to 'Eliminar', admin_sub_truck_path(type.id), :method => 'DELETE', :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :class=>'btn btn-danger' %>
               </td>
             </tr>
         <% end %>
