se acomoda la ubicacion de  la busqueda

--- a/app/views/admin/trucks/index.html.erb
+++ b/app/views/admin/trucks/index.html.erb
@@ -32,7 +32,7 @@
       </button>
     </p>
   </div>
-  <div class="col-md3">
+  <div class="col-md-3 col-md-offset-6">
     <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: @search_path, query_search_field: @query_search_field} %>
   </div>
 </div>
