--- a/app/views/admin/boxes_truck/index.html.erb
+++ b/app/views/admin/boxes_truck/index.html.erb
@@ -10,15 +10,7 @@
 <!-- /.row -->
 <% if flash[:notice] %>
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="alert alert-info alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <%= flash[:notice] %>
-        </div>
-      </div>
-    </div>
-
+<%= render partial: 'shared/flashNoticeMessage' %>
 
 <% end %>
 
