--- a/app/views/admin/extras/index.html.erb
+++ b/app/views/admin/extras/index.html.erb
@@ -10,14 +10,7 @@
 <!-- /.row -->
 <% if flash[:notice] %>
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="alert alert-info alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <%= flash[:notice] %>
-        </div>
-      </div>
-    </div>
+<%= render partial: 'shared/flashNoticeMessage' %>
 
 
 <% end %>
@@ -25,91 +18,21 @@
 <!-- /.row -->
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-3">
     <p>
       <%= link_to 'Nuevo repuesto', new_admin_extra_path,:method=>'get', :class=>'btn  btn-primary' %>
     </p>
+  </div>
+  <div class="col-md-3 col-md-offset-6">
+    <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field} %>
   </div>
 </div>
 
 <div class="row">
   <div class="col-lg-12">
 
-
-
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover table-striped">
-        <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Precio</th>
-          <th>Tipo</th>
-          <th>Marca</th>
-           <th>Departamento</th>
-          <th>Acciones</th>
-          <th>Estado</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @extras.each do |extra| %>
-            <tr>
-
-
-              <td>
-                <%= extra.name %>
-              </td>
-              <td>
-                <%= number_to_currency( extra.price) %>
-              </td>
-
-              <td>
-
-                <%=  extra.type_truck.name  if extra.type_truck %>
-              </td>
-
-              <td>
-                <%= extra.brand_extra.name if extra.brand_extra %>
-              </td>
-
-              <td>
-                <%= extra.state.name if extra.state %>
-              </td>
-
-
-
-
-              <td>
-                <%= link_to 'Editar', edit_admin_extra_path(extra.id), :class=>'btn btn-info' %>
-                <%= link_to 'Eliminar', {:controller => 'extras', :action => 'destroy', :id => extra.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
-              </td>
-
-              <td>
-                <% if extra.active == 1 %>
-
-
-                    <%= link_to admin_updateState_path(extra.id,1,'extra'), :class=>'btn btn-success' do %>
-                        <i class="fa fa-check"></i>
-                    <% end %>
-
-
-                <% else %>
-
-                    <%= link_to admin_updateState_path(extra.id,0,'extra'), :class=>'btn btn-danger' do %>
-                        <i class="fa fa-times"></i>
-                    <% end %>
-
-
-                <% end %>
-              </td>
-            </tr>
-        <% end %>
-
-
-        </tbody>
-
-
-
-      </table>
+    <div id="tabla" class="table-responsive">
+        <%= render partial: 'resultTable' %>
     </div>
     <%= render partial: "includes/paginator_admin" , locals: {object: @extras}%>
   </div>
