--- a/app/views/admin/offers/index.html.erb
+++ b/app/views/admin/offers/index.html.erb
@@ -10,14 +10,7 @@
 <!-- /.row -->
 <% if flash[:notice] %>
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="alert alert-info alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <%= flash[:notice] %>
-        </div>
-      </div>
-    </div>
+<%= render partial: 'shared/flashNoticeMessage' %>
 
 
 <% end %>
@@ -25,10 +18,13 @@
 <!-- /.row -->
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-3">
     <p>
       <%= link_to 'Nuevo Plan', new_admin_offer_path,:method=>'get', :class=>'btn  btn-primary' %>
     </p>
+  </div>
+  <div class="col-md-3 col-md-offset-6">
+    <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field} %>
   </div>
 </div>
 
@@ -37,43 +33,10 @@
 <div class="row">
   <div class="col-lg-12">
 
-
-
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover table-striped">
-        <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Precio</th>
-          <th>Precio Revendedor</th>
-          <th>Acciones</th>
-
-        </tr>
-        </thead>
-        <tbody>
-        <% @planes.each do |offer| %>
-
-            <tr>
-              <td><%= offer.nombre %></td>
-              <td><%= number_to_currency offer.precio1,  precision: 0 %></td>
-              <td><%= number_to_currency offer.precio2,  precision: 0 %></td>
-              <td>
-                <%= link_to 'Editar', edit_admin_offer_path(offer.id), :class=>'btn btn-info' %>
-                <%= link_to 'Eliminar', {:controller => 'admin/offers', :action => 'destroy', :id => offer.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
-              </td>
-            </tr>
-
-
-
-
-        <% end %>
-        </tbody>
-
-
-
-      </table>
+    <div id="tabla" class="table-responsive">
+        <%= render partial: 'resultTable'%>
+        <%= render partial: "includes/paginator_admin" , locals: {object: @planes_filter}%>
     </div>
-
 
 
   </div>
