--- a/app/views/admin/services/index.html.erb
+++ b/app/views/admin/services/index.html.erb
@@ -10,94 +10,28 @@
 <!-- /.row -->
 <% if flash[:notice] %>
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="alert alert-info alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <%= flash[:notice] %>
-        </div>
-      </div>
-    </div>
-
+    <%= render partial: 'shared/flashNoticeMessage' %>
 
 <% end %>
 
 <!-- /.row -->
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-3">
     <p>
       <%= link_to 'Nuevo servicio', new_admin_service_path,:method=>'get', :class=>'btn  btn-primary' %>
     </p>
+  </div>
+  <div class="col-md-3 col-md-offset-6">
+    <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field} %>
   </div>
 </div>
 
 <div class="row">
   <div class="col-lg-12">
 
-
-
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover table-striped">
-        <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Tipo de servicio</th>
-          <th>Departamento</th>
-          <th>Acciones</th>
-          <th>Estado</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @services.each do |type| %>
-            <tr>
-
-
-              <td>
-                <%= type.name %>
-              </td>
-
-              <td>
-                <%= type.type_service.name if type.type_service %>
-              </td>
-
-              <td>
-                <%= type.state.name if type.state %>
-              </td>
-
-              <td>
-                <%= link_to 'Editar', edit_admin_service_path(type.id), :class=>'btn btn-info' %>
-                <%= link_to 'Eliminar', {:controller => 'admin/services', :action => 'destroy', :id => type.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
-              </td>
-
-              <td>
-                <% if type.active == 1 %>
-
-
-                    <%= link_to admin_updateState_path(type.id,1,'service'), :class=>'btn btn-success' do %>
-                        <i class="fa fa-check"></i>
-                    <% end %>
-
-
-                <% else %>
-
-                    <%= link_to admin_updateState_path(type.id,0,'service'), :class=>'btn btn-danger' do %>
-                        <i class="fa fa-times"></i>
-                    <% end %>
-
-
-                <% end %>
-              </td>
-
-            </tr>
-        <% end %>
-
-
-        </tbody>
-
-
-
-      </table>
+    <div  id="resultTable" class="table-responsive">
+        <%= render partial:  'resultTable' %>
     </div>
     <%= render partial: "includes/paginator_admin" , locals: {object: @services}%>
   </div>
