--- a/app/views/admin/trucks/index.html.erb
+++ b/app/views/admin/trucks/index.html.erb
@@ -10,14 +10,7 @@
 <!-- /.row -->
 <% if flash[:notice] %>
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="alert alert-info alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <%= flash[:notice] %>
-        </div>
-      </div>
-    </div>
+<%= render partial: 'shared/flashNoticeMessage' %>
 
 
 <% end %>
@@ -33,7 +26,7 @@
     </p>
   </div>
   <div class="col-md-3 col-md-offset-6">
-    <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: @search_path, query_search_field: @query_search_field} %>
+    <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field} %>
   </div>
 </div>
 
