--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -116,7 +116,7 @@
       </ul>
     </li>
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>current_user.email <b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li>
           <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
@@ -166,13 +166,6 @@
         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-car"></i> Camiones <i class="fa fa-fw fa-caret-down"></i></a>
         <ul id="demo" class="collapse">
 
-
-
-
-
-
-
-
           <li>
             <%= link_to 'Camiones', admin_trucks_path, method: 'get' %>
           </li>
@@ -196,10 +189,6 @@
           <li>
             <%= link_to 'Marca Volvos', admin_marca_volcos_path, method: 'get' %>
           </li>
-
-
-
-
 
           <li>
             <%= link_to 'Tipos', admin_type_truck_index_path %>
@@ -282,16 +271,6 @@
       <li>
         <a href="<%= admin_states_path %>"><i class="fa fa-fw  fa-map-marker"></i> Ubicaciones</a>
       </li>
-
-
-
-
-
-
-
-
-
-
     </ul>
   </div>
   <!-- /.navbar-collapse -->
