--- a/app/views/pages/micamiones.html.erb
+++ b/app/views/pages/micamiones.html.erb
@@ -91,31 +91,20 @@
 
 
               <td>
+
                 <%= link_to 'Editar', micamionesedit_path(truck.id), :class=>'btn btn-info' %>
                 <%= link_to 'Eliminar',micamionesdelete_path(truck.id), :method=> 'delete',:data => {:confirm => 'Estas seguro de eliminar este elemento?'},:class=>'btn btn-danger' %>
-
-              </td>
-
-
-              <td style="display: none">
                 <% if truck.active == 1 %>
-
-
-        <%= link_to admin_updateState_path(truck.id,1,'truck'), :class=>'btn btn-success' do %>
-                        <i class="fa fa-check"></i>
-                    <% end %>
-
-
-    <% else %>
-
-        <%= link_to admin_updateState_path(truck.id,0,'truck'), :class=>'btn btn-danger' do %>
-                        <i class="fa fa-times"></i>
-                    <% end %>
-
-
-    <% end %>
+                  <%= link_to 'Vender', "/vender-camion/#{truck.id}", :class=>'btn btn-warning' %>
+                  <%= link_to  "/estatus-camion/#{truck.id}", :class=>'btn btn-danger' do %>
+                          <i class="fa fa-check"></i>
+                  <% end %>
+                <% elsif truck.active == 0 %>
+                  <%= link_to  "/estatus-camion/#{truck.id}", :class=>'btn btn-success' do %>
+                       <i class="fa fa-check"></i>
+                  <% end %>
+                <% end %>
               </td>
-
 
             </tr>
         <% end %>
