--- a/app/views/pages/micamiones.html.erb
+++ b/app/views/pages/micamiones.html.erb
@@ -51,7 +51,7 @@
           <th>Departamento</th>
           <th>Contactos</th>
           <th>Acciones</th>
-          <th style="display:none">Estado</th>
+          <th>Estado</th>
         </tr>
         </thead>
         <tbody>
@@ -89,22 +89,35 @@
                 <% end %>
               </td>
 
-
-              <td>
-
-                <%= link_to 'Editar', micamionesedit_path(truck.id), :class=>'btn btn-info' %>
-                <%= link_to 'Eliminar',micamionesdelete_path(truck.id), :method=> 'delete',:data => {:confirm => 'Estas seguro de eliminar este elemento?'},:class=>'btn btn-danger' %>
-                <% if truck.active == 1 %>
+            <td>
+              <% if truck.active == 1 %>
+                  <%= link_to 'Editar', micamionesedit_path(truck.id), :class=>'btn btn-info' %>
+                  <%= link_to 'Eliminar',micamionesdelete_path(truck.id), :method=> 'delete',:data => {:confirm => 'Estas seguro de eliminar este elemento?'},:class=>'btn btn-danger' %>
                   <%= link_to 'Vender', "/vender-camion/#{truck.id}", :class=>'btn btn-warning' %>
-                  <%= link_to  "/estatus-camion/#{truck.id}", :class=>'btn btn-danger' do %>
-                          <i class="fa fa-check"></i>
-                  <% end %>
-                <% elsif truck.active == 0 %>
-                  <%= link_to  "/estatus-camion/#{truck.id}", :class=>'btn btn-success' do %>
+              <% end %>
+            </td>
+
+            <td>
+
+               <% if truck.active == 1 %>
+
+                 <%= link_to  "/estatus-camion/#{truck.id}", :class=>'btn btn-danger' do %>
+                          <i class="fa fa-times"></i>
+                 <% end %>
+
+              <% elsif truck.active == 0 %>
+
+                 <%= link_to  "/estatus-camion/#{truck.id}", :class=>'btn btn-success' do %>
                        <i class="fa fa-check"></i>
-                  <% end %>
-                <% end %>
-              </td>
+                 <% end %>
+
+              <% elsif truck.active == 2 %>
+                  Vendido
+              <% end %>
+
+            </td>
+
+
 
             </tr>
         <% end %>
