--- a/app/views/pages/micuentalogin.html.erb
+++ b/app/views/pages/micuentalogin.html.erb
@@ -42,9 +42,10 @@
 
       <div class="actions">
         <input type="submit" value="Ingresar" class="btn btn-success"/>
+        <%= link_to 'Registrarse',  registrar_usuario_sessions_path  %>
       </div>
     </form>
-
+   
 
   </div>
 
